--- a/022.html
+++ b/022.html
@@ -75,17 +75,17 @@
                 </li>
                 <li data-role="list-divider" class="category-title ui-li-divider ui-bar-a" role="heading">基本信息</li>  <!-- 基本信息 -->              
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod ">超限运输许可证号：</div>
-                    <div class="detail-value " id="reqNo">A4400002024121900162</div></li>
+                    <div class="detail-value " id="reqNo">A4200002025040201162</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">有效范围：</div>
-				<div class="detail-value " id="passDists">广东省，湖南省</div></li>
+				<div class="detail-value " id="passDists">湖北省，重庆市</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod ">通行时间：</div>
-                    <div class="detail-value " id="passDate">2024年12月23日15时05分至 2024年12月31日23时59分</div></li>
+                    <div class="detail-value " id="passDate">2025年04月03日15时05分至 2025年04月20日23时59分</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod ">通行次数：</div>
                     <div class="detail-value " id="passCount">单次</div></li>    
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">通行路线：</div>
 				<div class="detail-value " id="roads"><br>
-<span id="pro">广东省</span>:集美建材--S236--广太收费站--G1523甬莞高速--杨林立交--S14汕湛高速--桥江立交--S19梅汕高速--石下立交--G35济广高速--转水立交--G25长深高速--佗城立交--G78汕昆高速--东三立交--S27韶新高速--五龙岭立交--G4京港澳高速--马渡立交--G0423乐广高速--G4京港澳高速--粤湘界；<br><hr>
-<span id="pro">湖南省</span>:湘粤界--G4京港澳高速--宜章收费站<br><hr>
+<span id="pro">湖北省</span>:中国石化利川王家湾加油站--腾龙大道--利川收费站--G50沪渝高速--G5012恩广高速--鄂渝界；<br><hr>
+<span id="pro">重庆市</span>:渝鄂界--G5012恩广高速--五桥收费站<br><hr>
 </div></li>
                     <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">承运单位：</div>
                     <div class="detail-value " id="certName">邢台铸辉商贸有限公司</div></li>
@@ -135,8 +135,8 @@
                 <li data-role="list-divider" class="category-title ui-li-divider ui-bar-a" role="heading">其他信息</li> <!-- 其他信息 -->
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">通行意见：</div>
 				<div class="detail-value " id="passOpinion"><br>
-广东省：<br>交通部门意见:同意通行！ <br>公安部门意见:暂无！<br><hr>
-湖南省：<br>交通部门意见:同意通行！ <br>公安部门意见:暂无！<br><hr>
+湖北省：<br>交通部门意见:同意通行！ <br>公安部门意见:暂无！<br><hr>
+重庆市：<br>交通部门意见:同意通行！ <br>公安部门意见:暂无！<br><hr>
 </div></li>                
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name-blod">护送方案：</div>
                     <div class="detail-image detail-value" id="planfile">无</div></li> 
