--- a/004.html
+++ b/004.html
@@ -84,7 +84,7 @@
                     <div class="detail-value " id="passCount">单次</div></li>    
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">通行路线：</div>
 				<div class="detail-value " id="roads"><br>
-<span id="pro">贵州省</span>:清镇收费站--G60沪昆高速--G6002贵阳绕城高速--G69银百高速--S30江黔高速--G56杭瑞高速--黔湘界；<br><hr>
+<span id="pro">贵州省</span>:观山湖西收费站--G60沪昆高速--G6002贵阳绕城高速--G69银百高速--S30江黔高速--G56杭瑞高速--黔湘界；<br><hr>
 <span id="pro">湖南省</span>:湘黔界--G56杭瑞高速--凤凰收费站<br><hr></div></li>
                     <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">承运单位：</div>
                     <div class="detail-value " id="certName">范哲宇</div></li>
